# wrapping_cpp_python

./: README.md
cpp_py_wrapper/: main.py  readme.md  setup.py  spammodule.c
swig_cpp_py_cmake_wrapper/: CMakeLists.txt  hello.c  setup.py  swigdemo.i
swig_cpp_py_wrapper/: .gitignore  Makefile  hello.c  hello.h  readme.md  swigdemo.i
